<!--
  ~ Attwifi Blacklister for Android
  ~ Copyright (C) 2014  David Van de Ven
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see http://www.gnu.org/licenses
  -->

<resources>
    <string name="app_name">Attwifi Blacklister</string>
    <string name="description">Disable ATTWIFI hotspot: will not connect ever</string>
    <string name="description_disabled">Enable ATTWIFI hotspot: will connect automatically</string>
    <string name="blacklisted">ATTWIFI hotspot blacklisted</string>
    <string name="restored">ATTWIFI hotspot restored</string>
    <string name="general">Settings</string>
    <string name="no_attwifi_found">No ATTWIFI hotspot found. You don\'t need this app!</string>
    <string name="support_title">Email Support</string>
    <string name="support_summary">Tap to email support</string>
    <string name="copyright_title">(c) 2014 David Van de Ven</string>
    <string name="copyright_summary">Tap to open license in browser</string>
    <string name="blacklist_title">Blacklist Attwifi Hotspot</string>
</resources>
